--- a/FrbaCommerce/FrbaCommerce.csproj
+++ b/FrbaCommerce/FrbaCommerce.csproj
@@ -55,19 +55,18 @@
   <ItemGroup>
     <Compile Include="FrbaCommerce\DAO\DaoCliente.cs" />
     <Compile Include="FrbaCommerce\DAO\DaoTelefono.cs" />
-    <Compile Include="FrbaCommerce\Modelo\Telefono.cs" />
+    <Compile Include="FrbaCommerce\Modelo\Funcion.cs" />
+    <Compile Include="FrbaCommerce\Modelo\Oferta.cs" />
+    <Compile Include="FrbaCommerce\Modelo\Pregunta.cs" />
+    <Compile Include="FrbaCommerce\Modelo\Publicacion.cs" />
+    <Compile Include="FrbaCommerce\Modelo\Rol.cs" />
+    <Compile Include="FrbaCommerce\Modelo\Rubro.cs" />
     <Compile Include="FrbaCommerce\Modelo\Cliente.cs" />
     <Compile Include="FrbaCommerce\Abm Cliente\Form1.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="FrbaCommerce\Abm Cliente\Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
-    </Compile>
-    <Compile Include="FrbaCommerce\Abm Cliente\Form2.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="FrbaCommerce\Abm Cliente\Form2.Designer.cs">
-      <DependentUpon>Form2.cs</DependentUpon>
     </Compile>
     <Compile Include="FrbaCommerce\Abm Empresa\Form1.cs">
       <SubType>Form</SubType>
@@ -153,6 +152,7 @@
     <Compile Include="FrbaCommerce\Login\Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="FrbaCommerce\Modelo\Visibilidad.cs" />
     <Compile Include="FrbaCommerce\Program.cs" />
     <Compile Include="FrbaCommerce\Properties\AssemblyInfo.cs" />
     <Compile Include="FrbaCommerce\Properties\Resources.Designer.cs" />
@@ -169,7 +169,6 @@
     <Content Include="FrbaCommerce\FrbaCommerce.csproj" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="FrbaCommerce\Control\" />
     <Folder Include="FrbaCommerce\obj\Debug\Refactor\" />
     <Folder Include="FrbaCommerce\obj\Debug\TempPE\" />
   </ItemGroup>
