Modelo finalizado. Sujeto a revisión :)

--- a/FrbaCommerce/FrbaCommerce.csproj
+++ b/FrbaCommerce/FrbaCommerce.csproj
@@ -57,6 +57,7 @@
     <Compile Include="FrbaCommerce\DAO\DaoTelefono.cs" />
     <Compile Include="FrbaCommerce\Modelo\Direccion.cs" />
     <Compile Include="FrbaCommerce\Modelo\Empresa.cs" />
+    <Compile Include="FrbaCommerce\Modelo\Factura.cs" />
     <Compile Include="FrbaCommerce\Modelo\Funcion.cs" />
     <Compile Include="FrbaCommerce\Modelo\Oferta.cs" />
     <Compile Include="FrbaCommerce\Modelo\Pregunta.cs" />
@@ -155,6 +156,7 @@
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
     <Compile Include="FrbaCommerce\Modelo\Usuario.cs" />
+    <Compile Include="FrbaCommerce\Modelo\VentasRealizadas.cs" />
     <Compile Include="FrbaCommerce\Modelo\Visibilidad.cs" />
     <Compile Include="FrbaCommerce\Program.cs" />
     <Compile Include="FrbaCommerce\Properties\AssemblyInfo.cs" />
