Graba y levanta datos de la BD! :D
:dancer:

--- a/FrbaCommerce/FrbaCommerce.csproj
+++ b/FrbaCommerce/FrbaCommerce.csproj
@@ -120,6 +120,7 @@
       <DependentUpon>ABMRol.cs</DependentUpon>
     </Compile>
     <Compile Include="FrbaCommerce\Connection\DBConexion.cs" />
+    <Compile Include="FrbaCommerce\Connection\SQLUtils.cs" />
     <Compile Include="FrbaCommerce\DAO\DaoCliente.cs" />
     <Compile Include="FrbaCommerce\DAO\DaoTelefono.cs" />
     <Compile Include="FrbaCommerce\Login\SeleccionRol.cs">
