DaoTelefono ok, seguir con la asignacion
Arreglos sobre el modelo, se agrega la clase Telefono.
Se crea la daoTelefono, y la misma se encuentra lista para ser probada.

--- a/FrbaCommerce/FrbaCommerce.csproj
+++ b/FrbaCommerce/FrbaCommerce.csproj
@@ -135,6 +135,7 @@
     <Compile Include="FrbaCommerce\Login\Login.Designer.cs">
       <DependentUpon>Login.cs</DependentUpon>
     </Compile>
+    <Compile Include="FrbaCommerce\Modelo\Telefono.cs" />
     <Compile Include="FrbaCommerce\Modelo\Direccion.cs" />
     <Compile Include="FrbaCommerce\Modelo\Empresa.cs" />
     <Compile Include="FrbaCommerce\Modelo\Factura.cs" />
