Actualizacion del dia... no recuerdo si compila
Actualizacon del dia, lo siguiente uqe hay que hacer es asignarles roles
a los usuarios, y empezar a probar el login. O seguir con los otros
ABMs, que ya teniendo el modelo salen rapido. Por lo que recuerdo tengo
cubierto hasta el punto 7, menos el punto 1. Y el resto estan
encaminados.

--- a/FrbaCommerce/FrbaCommerce.csproj
+++ b/FrbaCommerce/FrbaCommerce.csproj
@@ -62,6 +62,12 @@
     <EmbeddedResource Include="FrbaCommerce\ABM Rol\AltaRol.resx">
       <DependentUpon>AltaRol.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="FrbaCommerce\Abm Visibilidad\ABMVisibilidad.resx">
+      <DependentUpon>ABMVisibilidad.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FrbaCommerce\Abm Visibilidad\AltaVisibilidad.resx">
+      <DependentUpon>AltaVisibilidad.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="FrbaCommerce\Login\CambiarPass.resx">
       <DependentUpon>CambiarPass.cs</DependentUpon>
     </EmbeddedResource>
@@ -122,8 +128,21 @@
     <Compile Include="FrbaCommerce\ABM Rol\ABMRol.Designer.cs">
       <DependentUpon>ABMRol.cs</DependentUpon>
     </Compile>
+    <Compile Include="FrbaCommerce\Abm Visibilidad\ABMVisibilidad.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FrbaCommerce\Abm Visibilidad\ABMVisibilidad.Designer.cs">
+      <DependentUpon>ABMVisibilidad.cs</DependentUpon>
+    </Compile>
+    <Compile Include="FrbaCommerce\Abm Visibilidad\AltaVisibilidad.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FrbaCommerce\Abm Visibilidad\AltaVisibilidad.Designer.cs">
+      <DependentUpon>AltaVisibilidad.cs</DependentUpon>
+    </Compile>
     <Compile Include="FrbaCommerce\Connection\DBConexion.cs" />
     <Compile Include="FrbaCommerce\Connection\SQLUtils.cs" />
+    <Compile Include="FrbaCommerce\DAO\DaoVisibilidad.cs" />
     <Compile Include="FrbaCommerce\DAO\DaoEmpresa.cs" />
     <Compile Include="FrbaCommerce\DAO\DaoCliente.cs" />
     <Compile Include="FrbaCommerce\DAO\DaoLogin.cs" />
@@ -175,12 +194,6 @@
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="FrbaCommerce\Abm Rubro\Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
-    </Compile>
-    <Compile Include="FrbaCommerce\Abm Visibilidad\Form1.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="FrbaCommerce\Abm Visibilidad\Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
     <Compile Include="FrbaCommerce\Calificar Vendedor\Form1.cs">
