--- a/FrbaCommerce/FrbaCommerce.csproj
+++ b/FrbaCommerce/FrbaCommerce.csproj
@@ -145,6 +145,11 @@
     </Compile>
     <Compile Include="FrbaCommerce\Connection\DBConexion.cs" />
     <Compile Include="FrbaCommerce\Connection\SQLUtils.cs" />
+    <Compile Include="FrbaCommerce\DAO\DaoUsuario.cs" />
+    <Compile Include="FrbaCommerce\DAO\DaoTipoPublicacion.cs" />
+    <Compile Include="FrbaCommerce\DAO\DaoEstadoPublicacion.cs" />
+    <Compile Include="FrbaCommerce\DAO\DaoPublicacion.cs" />
+    <Compile Include="FrbaCommerce\DAO\DaoRubro.cs" />
     <Compile Include="FrbaCommerce\DAO\DaoFuncionalidad.cs" />
     <Compile Include="FrbaCommerce\DAO\DaoRol.cs" />
     <Compile Include="FrbaCommerce\DAO\DaoVisibilidad.cs" />
@@ -177,6 +182,8 @@
     <Compile Include="FrbaCommerce\Login\Login.Designer.cs">
       <DependentUpon>Login.cs</DependentUpon>
     </Compile>
+    <Compile Include="FrbaCommerce\Modelo\TipoPublicacion.cs" />
+    <Compile Include="FrbaCommerce\Modelo\EstadoPublicacion.cs" />
     <Compile Include="FrbaCommerce\Modelo\TipoDocumento.cs" />
     <Compile Include="FrbaCommerce\Modelo\Telefono.cs" />
     <Compile Include="FrbaCommerce\Modelo\Direccion.cs" />
